--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,3 @@
 RewriteEngine on
-RewriteCond $1 !^(index\.php|robots\.txt|sitemap\.xml|plantilla)
-RewriteCond $2 !^(index\.php|robots\.txt|sitemap\.xml|public)
+RewriteCond $1 !^(index\.php|robots\.txt|sitemap\.xml|plantilla|public)
 RewriteRule ^(.*)$ index.php/$1 [L]
